--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -20,18 +20,57 @@ blog:
     {{#each shipping_messages}}
         {{> components/common/alert-info message}}
     {{/each}}
-<div class="home-banner">
-  <a href="/fall-winter/">
-    <div class="banner-content">
-      <div class="fallwinter-banner">
-          <div class="slide-content">
+
+
+<div id="home-carousel" class="home-carousel carousel slide" data-ride="carousel">
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+      <div class='carousel-content fallwinter-2015 carousel-active'>
+        <a href="/fall-winter/">
+          <div class="fallwinter-banner">
+            <div class="slide-content">
               <h2 class="league">The FW Collection!</h2>
-              <div class="button slider-button collection"><a href="/shop">Shop Now</a></div>
+              <div class="button slider-button collection">Shop Now</div>
+            </div>
           </div>
-      </div>
+        </a>
+      </div>  
     </div>
+    <div class="item">
+      <div class='carousel-content shop-womens'>
+        <a href="/womens">
+          <div class="slide-content">
+              <h2 class="league">Women's</h2>
+              <div class="button slider-button collection"><a href="/womens">Shop Now</a></div>
+          </div>
+        </a>
+      </div>  
+    </div>
+    <div class="item">
+      <div class='carousel-content shop-mens'>
+        <a href="/mens">
+          <div class="slide-content">
+            <h2 class="league">Men's</h2>
+            <div class="button slider-button collection"><a href="/mens">Shop Now</a></div>
+          </div> 
+        </a>            
+      </div>
+    </div>    
+  </div>
+  <!-- end of slides -->
+  <!-- Controls -->
+  <a class="left carousel-control" href="#home-carousel" role="button" data-slide="prev">
+    <i class="fa fa-angle-left" aria-hidden="true"></i>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#home-carousel" role="button" data-slide="next">
+    <i class="fa fa-angle-right" aria-hidden="true"></i>
+    <span class="sr-only">Next</span>
   </a>
 </div>
+
+
 
   <div class="row cta-wrapper hidden-xs clearfix">
     <div class="col-md-10 col-md-offset-1 col-sm-12">
@@ -83,10 +122,11 @@ blog:
             <div class="col-md-6 col-sm-12 no-pad">
                 <div class="cta-right ctas">
                     <a href="/fall-winter/">
-                        <div class="cta-title">
-                            <h2 class="open-s">The New<span class="league"> Fall/Winter Collection</span></h2>
-                            <span class="view-more">view now</span>
-                        </div>
+                      <div class="cta-title">
+                          <h2 class="open-s">The New<span class="league"> Fall/Winter Collection</span></h2>
+                          <span class="view-more">view now</span>
+                      </div>
+                      <div class="image-overlay"></div>
                     </a>
                 </div>
             </div>
@@ -115,6 +155,7 @@ blog:
                     <h2 class="open-s">Fall/Winter<span class="league">  Lookbook</span></h2>
                    <span class="view-more">view now</span>
                   </div>
+                  <div class="image-overlay"></div>
                 </a>
               </div>
             </div>
