--- a/templates/components/common/header.html
+++ b/templates/components/common/header.html
@@ -77,7 +77,7 @@
             <ul>
               <li><span>follow us:</span></li>
               <li><a target="_blank" href="//www.facebook.com/timber.threads.clothing"><i class="fa fa-facebook"></i></a></li>
-              <li><a target="_blank" href="//instagram.com/timberthreads"><i class="fa fa-instagram"></i></a></li>
+              <li><a target="_blank" href="//instagram.com/timber.threads"><i class="fa fa-instagram"></i></a></li>
               <li><a target="_blank" href="//twitter.com/timber_threads"><i class="fa fa-twitter"></i></a></li>
               <li><a target="_blank" href="//vimeo.com/user30584886"><i class="fa fa-vimeo"></i></a></li>
             </ul>
