--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -26,15 +26,15 @@ blog:
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <div class='carousel-content fallwinter-2015 carousel-active'>
-        <a href="/fall-winter/">
-          <div class="fallwinter-banner">
+      <div class='carousel-content thecomeback carousel-active'>
+        
+          <div class="thecomeback-banner">
             <div class="slide-content">
-              <h2 class="league">The FW Collection!</h2>
-              <div class="button slider-button collection">Shop Now</div>
+              <h2 class="league">The Come Back <span>Collection</span></h2>
+              <h3>This February</h3>
+              <!-- <div class="button slider-button collection">This February</div> -->
             </div>
           </div>
-        </a>
       </div>  
     </div>
     <div class="item">
@@ -69,9 +69,6 @@ blog:
     <span class="sr-only">Next</span>
   </a>
 </div>
-
-
-
   <div class="row cta-wrapper hidden-xs clearfix">
     <div class="col-md-10 col-md-offset-1 col-sm-12">
       <div class="cta-wrapper-one ">
