--- a/templates/components/category/sort-box.html
+++ b/templates/components/category/sort-box.html
@@ -1,7 +1,7 @@
-<fieldset class="form-fieldset actionBar-section">
+<fieldset class="form-group">
     <div class="form-field">
         <label class="form-label" for="sort">{{lang 'common.sorter.sort_by'}}</label>
-        <select class="form-select form-select--small" name="sort" id="sort">
+        <select class="form-control" name="sort" id="sort">
             <option value="featured" {{#if sort '==' 'featured'}}selected{{/if}}>{{lang 'common.sorter.featured'}}</option>
             <option value="newest" {{#if sort '==' 'newest'}}selected{{/if}}>{{lang 'common.sorter.newest'}}</option>
             <option value="bestselling" {{#if sort '==' 'bestselling'}}selected{{/if}}>{{lang 'common.sorter.top_sellers'}}</option>
