--- a/templates/components/common/footer.html
+++ b/templates/components/common/footer.html
@@ -12,7 +12,7 @@
     <div id="inner-footer" class="wrap cf">
       <div class="about-section">
         <div class="footer-logo s-logo">
-          <img src="/stencil/theme/1/img/logo.svg" alt="">
+          <img src="{{cdn '/assets/img/logo.svg'}}" alt="">
           <span class="robot">Quality clothing</span>
         </div>
         <div class="content-section">
@@ -34,7 +34,7 @@
             <h3>Follow us on:</h3>
             <ul>
               <li><a target="_blank" href="//www.facebook.com/timber.threads.clothing"><i class="fa fa-facebook"></i></a></li>
-              <li><a target="_blank" href="//instagram.com/timberthreads"><i class="fa fa-instagram"></i></a></li>
+              <li><a target="_blank" href="//instagram.com/timber.threads"><i class="fa fa-instagram"></i></a></li>
               <li><a target="_blank" href="//twitter.com/timber_threads"><i class="fa fa-twitter"></i></a></li>
               <li><a target="_blank" href="//vimeo.com/user30584886"><i class="fa fa-vimeo"></i></a></li>
             </ul>
